CHANGES.txt - 2006-04-26
------------------------

CHANGES IN CUPS V1.2

	- Fixed support for --enable-pie (STR #1609)
	- The pdftops filter did not validate the length of the
	  encryption key (STR #1608)
	- Updated the Polish localization.
	- "Encryption Required" in the cupsd.conf file now only
	  requires encryption when the connection is not over the
	  loopback interface or domain socket.
	- Printer names containing "+" were not quoted properly in
	  the web interface (STR #1600)
	- The SNMP backend now reports the make and model in the
	  information string so that the auto-generated printer
	  name is more useful than just an IP address.


CHANGES IN CUPS V1.2rc3

	- The cups-lpd program always did reverse lookups on the
	  client address, which could be a performance problem.
	  Added a "-n" option to disable lookups.
	- When configured with SSL support, require encryption by
	  default when displaying the /admin location (STR #1592)
	- The next job ID was not computed correctly if the job
	  cache file got out of sync with the spool directory
	  (STR #1582)
	- The PNG image handling code used deprecated functions
	  from libpng (STR #1587)
	- Added a Polish translation (STR #1584, STR #1586)
	- More changes to the scheduler to improve battery life
	  on portable devices (STR #1583)
	- Changed the default log level for status messages back
	  to "DEBUG" to be consistent with CUPS 1.1.x (STR #1579)
	- The error string was not set properly when
	  cupsDoFileRequest() was given the name of a directory
	  (STR #1578)
	- Fixed handling of job-hold-until (STR #1581)
	- Added explicit notes to the cupsaddsmb man page
	  explaining that the driver filenames are case-sensitive
	  under UNIX and that they must be all lowercase (Windows
	  2000) or all UPPERCASE (Windows 95/98/Me) to work (STR
	  #1568)
	- The USB backend incorrectly split the manufacturer name
	  if it contained spaces (STR #1566)
	- The scheduler would hang when listing PPD files for a