@@ -3,6 +3,9 @@ CHANGES.txt - 2006-04-26
 
 CHANGES IN CUPS V1.2
 
+	- Added CUPS library to CUPS Image shared library
+	  linkage to support Linux --as-needed linker option
+	  (STR #1606)
 	- Fixed support for --enable-pie (STR #1609)
 	- The pdftops filter did not validate the length of the
 	  encryption key (STR #1608)
